Updates projects list

--- a/projects/index.html
+++ b/projects/index.html
@@ -104,8 +104,8 @@
 			<article class="project-preview ">
 				<div class="project-preview__img">
 					<figure class="overlap-img">
-						<a href="https:billinginc.now.sh">
-							<img src="../assets/img/projects/billininc.png" alt="Billing Inc" />
+						<a target="_blank" href="https://billinginc.now.sh">
+							<img src="https://billinginc.now.sh/img/billinginc.png" alt="Billing Inc" />
 						</a>
 					</figure>
 				</div>
@@ -113,15 +113,14 @@
 				<div class="project-preview__content">
 					<div class="content-styles">
 						<h2>
-							<a href="https:billinginc.now.sh">
+							<a target="_blank" href="https://billinginc.now.sh">
 								Billing Inc
 							</a>
 						</h2>
 
 						<p class="txt-large">
-							A invoicing and accounting application , for small and medium
-							bussiness to grow and manage their accounts and sales data
-							offfline.
+							An easy to use invoicing, inventory and accounting app, for small and medium
+							bussiness to grow and manage their accounts integrated with various features and cloud services.
 						</p>
 					</div>
 
@@ -166,7 +165,247 @@
 			<article class="project-preview ">
 				<div class="project-preview__img">
 					<figure class="overlap-img">
-						<a href="http:carnationevent.com">
+						<a target="_blank" href="https://chatboi.now.sh">
+							<img height="300" width="100" src="../assets/img/projects/chattboi.PNG" alt="Chatboi" />
+						</a>
+					</figure>
+				</div>
+
+				<div class="project-preview__content">
+					<div class="content-styles">
+						<h2>
+							<a target="_blank" href="https://chatboi.now.sh">
+								Chatboi
+							</a>
+						</h2>
+
+						<p class="txt-large">
+							An social messaging app , with fun content, video calls and group chats and privacy controls.
+						</p>
+					</div>
+
+					<div class="spacing-tiny-top">
+						<ul class="icon-list">
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path d="M11 9.27V0l6 11-4 6H7l-4-6L9 0v9.27a2 2 0 1 0 2 0zM6 18h8v2H6v-2z" />
+									</svg>
+								</span>
+								Social messaging app
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M7 17H2a2 2 0 0 1-2-2V2C0 .9.9 0 2 0h16a2 2 0 0 1 2 2v13a2 2 0 0 1-2 2h-5l4 2v1H3v-1l4-2zM2 2v11h16V2H2z" />
+									</svg>
+								</span>
+								App Design & Development
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M.7 9.3l4.8-4.8 1.4 1.42L2.84 10l4.07 4.07-1.41 1.42L0 10l.7-.7zm18.6 1.4l.7-.7-5.49-5.49-1.4 1.42L17.16 10l-4.07 4.07 1.41 1.42 4.78-4.78z" />
+									</svg>
+								</span>
+								Ionic , React & MongoDB
+							</li>
+						</ul>
+					</div>
+				</div>
+			</article>
+		</div>
+	</section>
+	<section class="section section--large spacing-huge-top">
+		<div class="spacing-huge-bottom">
+			<article class="project-preview ">
+				<div class="project-preview__img">
+					<figure class="overlap-img">
+						<a target="_blank" href="https://catalog-alpha.now.sh">
+							<img height="300" width="100" src="../assets/img/projects/catalog.PNG" alt="Catalog" />
+						</a>
+					</figure>
+				</div>
+
+				<div class="project-preview__content">
+					<div class="content-styles">
+						<h2>
+							<a target="_blank" href="https://catalog-alpha.now.sh">
+								Catalog Alpha</a>
+							</a>
+						</h2>
+
+						<p class="txt-large">
+							An digital catalog for the small bussiness and marketing toolkit , with product posting and qr scans.
+						</p>
+					</div>
+
+					<div class="spacing-tiny-top">
+						<ul class="icon-list">
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path d="M11 9.27V0l6 11-4 6H7l-4-6L9 0v9.27a2 2 0 1 0 2 0zM6 18h8v2H6v-2z" />
+									</svg>
+								</span>
+								Digital Marketing Tool
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M7 17H2a2 2 0 0 1-2-2V2C0 .9.9 0 2 0h16a2 2 0 0 1 2 2v13a2 2 0 0 1-2 2h-5l4 2v1H3v-1l4-2zM2 2v11h16V2H2z" />
+									</svg>
+								</span>
+								App Design & Development
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M.7 9.3l4.8-4.8 1.4 1.42L2.84 10l4.07 4.07-1.41 1.42L0 10l.7-.7zm18.6 1.4l.7-.7-5.49-5.49-1.4 1.42L17.16 10l-4.07 4.07 1.41 1.42 4.78-4.78z" />
+									</svg>
+								</span>
+								Ionic , React & Firebase
+							</li>
+						</ul>
+					</div>
+				</div>
+			</article>
+		</div>
+	</section>
+	<section class="section section--large spacing-huge-top">
+		<div class="spacing-huge-bottom">
+			<article class="project-preview ">
+				<div class="project-preview__img">
+					<figure class="overlap-img">
+						<a target="_blank" href="https://gamezone.now.sh">
+							<img height="300" width="100" src="../assets/img/projects/gamezone.PNG" alt="Chatboi" />
+						</a>
+					</figure>
+				</div>
+
+				<div class="project-preview__content">
+					<div class="content-styles">
+						<h2>
+							<a target="_blank" href="https://gamezone.now.sh">
+								GameZone
+							</a>
+						</h2>
+
+						<p class="txt-large">
+							An social gaming app , with fun games and score tracking control and microtransactions.
+						</p>
+					</div>
+
+					<div class="spacing-tiny-top">
+						<ul class="icon-list">
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path d="M11 9.27V0l6 11-4 6H7l-4-6L9 0v9.27a2 2 0 1 0 2 0zM6 18h8v2H6v-2z" />
+									</svg>
+								</span>
+								Game
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M7 17H2a2 2 0 0 1-2-2V2C0 .9.9 0 2 0h16a2 2 0 0 1 2 2v13a2 2 0 0 1-2 2h-5l4 2v1H3v-1l4-2zM2 2v11h16V2H2z" />
+									</svg>
+								</span>
+								App Design & Development
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M.7 9.3l4.8-4.8 1.4 1.42L2.84 10l4.07 4.07-1.41 1.42L0 10l.7-.7zm18.6 1.4l.7-.7-5.49-5.49-1.4 1.42L17.16 10l-4.07 4.07 1.41 1.42 4.78-4.78z" />
+									</svg>
+								</span>
+								Ionic , React & Firebase
+							</li>
+						</ul>
+					</div>
+				</div>
+			</article>
+		</div>
+	</section>
+	<section class="section section--large spacing-huge-top">
+		<div class="spacing-huge-bottom">
+			<article class="project-preview ">
+				<div class="project-preview__img">
+					<figure class="overlap-img">
+						<a target="_blank" href="https://xpjain-marioplan.web.app/">
+							<img src="../assets/img/projects/mario.PNG" alt="Mario Plan" />
+						</a>
+					</figure>
+				</div>
+
+				<div class="project-preview__content">
+					<div class="content-styles">
+						<h2>
+							<a target="_blank" href="https://xpjain-marioplan.web.app/">
+								Mario Plan
+							</a>
+						</h2>
+
+						<p class="txt-large">
+							An easy mario theme based Wall Posting web app with authentication and notifications. Can be use as blog post and small social sharing.
+						</p>
+					</div>
+
+					<div class="spacing-tiny-top">
+						<ul class="icon-list">
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path d="M11 9.27V0l6 11-4 6H7l-4-6L9 0v9.27a2 2 0 1 0 2 0zM6 18h8v2H6v-2z" />
+									</svg>
+								</span>
+								Web App
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M7 17H2a2 2 0 0 1-2-2V2C0 .9.9 0 2 0h16a2 2 0 0 1 2 2v13a2 2 0 0 1-2 2h-5l4 2v1H3v-1l4-2zM2 2v11h16V2H2z" />
+									</svg>
+								</span>
+								Web App Development
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M.7 9.3l4.8-4.8 1.4 1.42L2.84 10l4.07 4.07-1.41 1.42L0 10l.7-.7zm18.6 1.4l.7-.7-5.49-5.49-1.4 1.42L17.16 10l-4.07 4.07 1.41 1.42 4.78-4.78z" />
+									</svg>
+								</span>
+								JS , React & Firebase
+							</li>
+						</ul>
+					</div>
+				</div>
+			</article>
+		</div>
+	</section>
+	<section class="section section--large spacing-huge-top">
+		<div class="spacing-huge-bottom">
+			<article class="project-preview ">
+				<div class="project-preview__img">
+					<figure class="overlap-img">
+						<a target="_blank" href="https://carnationevents.netlify.app">
 							<img src="../assets/img/projects/carnation.png" alt="Carnation Events" />
 						</a>
 					</figure>
@@ -175,7 +414,7 @@
 				<div class="project-preview__content">
 					<div class="content-styles">
 						<h2>
-							<a href="http:carnationevent.com">
+							<a target="_blank" href="https://carnationevents.netlify.app">
 								Carnation Event Planner 
 							</a>
 						</h2>
@@ -226,7 +465,7 @@
 			<article class="project-preview ">
 				<div class="project-preview__img">
 					<figure class="overlap-img">
-						<a href="https://phonesnow.netlify.com/">
+						<a target="_blank" href="https://phonesnow.netlify.com/">
 							<img src="../assets/img/projects/ecommerce.png" alt="E-commerce app" />
 						</a>
 					</figure>
@@ -235,7 +474,7 @@
 				<div class="project-preview__content">
 					<div class="content-styles">
 						<h2>
-							<a href="https://phonesnow.netlify.com/">
+							<a target="_blank" href="https://phonesnow.netlify.com/">
 								E-commerce App
 							</a>
 						</h2>
@@ -286,8 +525,8 @@
 			<article class="project-preview ">
 				<div class="project-preview__img">
 					<figure class="overlap-img">
-						<a href="https://news-timesq.web.app/">
-							<img src="../assets/img/projects/newstimes.png" alt="News app" />
+						<a target="_blank" href="https://countsaccount-b3qu45jpv.now.sh/">
+							<img src="../assets/img/projects/countsaccount.PNG" alt="News app" />
 						</a>
 					</figure>
 				</div>
@@ -295,13 +534,13 @@
 				<div class="project-preview__content">
 					<div class="content-styles">
 						<h2>
-							<a href="https://news-timesq.web.app/">
-								News'Time App
+							<a target="_blank" href="https://countsaccount-b3qu45jpv.now.sh/">
+								Counts Accounts
 							</a>
 						</h2>
 
 						<p class="txt-large">
-							An News Reading app ,for reader to read current news online.
+							A minimalistic and static website for the client.
 						</p>
 					</div>
 
@@ -313,7 +552,7 @@
 										<path d="M11 9.27V0l6 11-4 6H7l-4-6L9 0v9.27a2 2 0 1 0 2 0zM6 18h8v2H6v-2z" />
 									</svg>
 								</span>
-								News App , Fetch News from multiple news agency
+								Dynamic & Modern UI
 							</li>
 
 							<li class="icon-list__item">
@@ -323,7 +562,7 @@
 											d="M7 17H2a2 2 0 0 1-2-2V2C0 .9.9 0 2 0h16a2 2 0 0 1 2 2v13a2 2 0 0 1-2 2h-5l4 2v1H3v-1l4-2zM2 2v11h16V2H2z" />
 									</svg>
 								</span>
-								App & Web Development
+								Web Development
 							</li>
 
 							<li class="icon-list__item">
@@ -333,7 +572,66 @@
 											d="M.7 9.3l4.8-4.8 1.4 1.42L2.84 10l4.07 4.07-1.41 1.42L0 10l.7-.7zm18.6 1.4l.7-.7-5.49-5.49-1.4 1.42L17.16 10l-4.07 4.07 1.41 1.42 4.78-4.78z" />
 									</svg>
 								</span>
-								React , API Integration
+								JS, CSS & HTML5
+						</ul>
+					</div>
+				</div>
+			</article>
+		</div>
+	</section>
+	<section class="section section--large spacing-huge-top">
+		<div class="spacing-huge-bottom">
+			<article class="project-preview ">
+				<div class="project-preview__img">
+					<figure class="overlap-img">
+						<a target="_blank" href="https://web.jainprashul.now.sh">
+							<img src="../assets/img/projects/cubotho.png" alt="Cubothon" />
+						</a>
+					</figure>
+				</div>
+
+				<div class="project-preview__content">
+					<div class="content-styles">
+						<h2>
+							<a target="_blank" href="https://web.jainprashul.now.sh">
+								Cubothon 3D Game
+							</a>
+						</h2>
+
+						<p class="txt-large">
+							A 3D oriented running game ,with minimal design made with realtime physics. Uses Unity Engine to run.
+						</p>
+					</div>
+
+					<div class="spacing-tiny-top">
+						<ul class="icon-list">
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path d="M11 9.27V0l6 11-4 6H7l-4-6L9 0v9.27a2 2 0 1 0 2 0zM6 18h8v2H6v-2z" />
+									</svg>
+								</span>
+								3D game with realtime Physics
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M7 17H2a2 2 0 0 1-2-2V2C0 .9.9 0 2 0h16a2 2 0 0 1 2 2v13a2 2 0 0 1-2 2h-5l4 2v1H3v-1l4-2zM2 2v11h16V2H2z" />
+									</svg>
+								</span>
+								Game Development
+							</li>
+
+							<li class="icon-list__item">
+								<span class="icon-list__img">
+									<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+										<path
+											d="M.7 9.3l4.8-4.8 1.4 1.42L2.84 10l4.07 4.07-1.41 1.42L0 10l.7-.7zm18.6 1.4l.7-.7-5.49-5.49-1.4 1.42L17.16 10l-4.07 4.07 1.41 1.42 4.78-4.78z" />
+									</svg>
+								</span>
+								Unity , Game Machanics , C#
 						</ul>
 					</div>
 				</div>
@@ -407,7 +705,7 @@
 										z" />
 								</svg>
 							</span>
-							<a href="https://www.linkedin.com/in/jainprashul/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3Bz5DLsFFASkGXhq6m4W2Fbg%3D%3D"
+							<a href="https://www.linkedin.com/in/jainprashul"
 								target="_blank" rel="noopener">
 								On LinkedIn
 							</a>
@@ -463,7 +761,7 @@
 	<footer class="site-footer">
 		<div class="site-footer__inner">
 			<p>
-				&copy; 2019 Prashul Jain. All rights reserved.
+				&copy; 2021 Prashul Jain. All rights reserved.
 			</p>
 		</div>
 	</footer>
